--- a/RestaurantSystem.API/appsettings.json
+++ b/RestaurantSystem.API/appsettings.json
@@ -7,6 +7,6 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "DefaultConnection": "Data Source=(localdb)\\MSSQLLocalDB;Initial Catalog=ResturantDb;Integrated Security=True;Encrypt=False;Trust Server Certificate=True"
+    "DefaultConnection": "Put Your Connectiong String Here"
   }
 }
