Commit For Login and Register and Roles JWT Setting

--- a/RestaurantSystem.Application/RestaurantSystem.Application.csproj
+++ b/RestaurantSystem.Application/RestaurantSystem.Application.csproj
@@ -8,11 +8,11 @@
     <Folder Include="Features\Commands\" />
     <Folder Include="Features\MenuItems\" />
     <Folder Include="Features\Queries\" />
-    <Folder Include="Interfaces\" />
   </ItemGroup>
 
   <ItemGroup>
     <PackageReference Include="SyrianBallaS.AutoMapper.Extensions.Microsoft.DependencyInjection.Signed" Version="3.2.0" />
+    <PackageReference Include="System.IdentityModel.Tokens.Jwt" Version="8.14.0" />
   </ItemGroup>
 
   <PropertyGroup>
