--- a/RestaurantSystem.Domain/RestaurantSystem.Domain.csproj
+++ b/RestaurantSystem.Domain/RestaurantSystem.Domain.csproj
@@ -12,4 +12,8 @@
     <Folder Include="ValueObjects\" />
   </ItemGroup>
 
+  <ItemGroup>
+    <PackageReference Include="Microsoft.AspNetCore.Identity.EntityFrameworkCore" Version="8.0.21" />
+  </ItemGroup>
+
 </Project>
